--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,36 @@
-# Auto detect text files and perform LF normalization
+# Normalización de finales de línea para archivos de texto
 * text=auto
+
+# Forzar LF para archivos de código fuente
+*.js text eol=lf
+*.jsx text eol=lf
+*.ts text eol=lf
+*.tsx text eol=lf
+*.scss text eol=lf
+*.css text eol=lf
+*.html text eol=lf
+*.json text eol=lf
+*.md text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.env text eol=lf
+
+# Tratamiento de archivos binarios
+# Impide que se intente hacer merge o diff en archivos binarios
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.svg binary
+*.webp binary
+
+# Ignorar archivos de build en exportaciones (si se usa `git archive`)
+dist/ export-ignore
+node_modules/ export-ignore
+
+# Tratamiento de archivos de configuración y lock files
+*.lock text eol=lf
+*.toml text eol=lf
+*.ini text eol=lf
+*.sh text eol=lf
+*.bat text eol=crlf
