fix: corregir formato en archivos de configuración de TypeScript y Stylelint

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,11 +28,11 @@
       "@/*": ["src/*"],
       "@styles/*": ["src/styles/*"],
       "@assets/*": ["src/assets/*"],
-      "@components/*": ["src/components/*"],
+      "@components/*": ["src/components/*"]
     },
 
     /* types */
-    "types": ["vite/client","vitest/globals"]
+    "types": ["vite/client", "vitest/globals"]
   },
   "include": ["src"]
 }
