--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-boilerplate",
+  "name": "finance",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -26,18 +26,11 @@
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.2",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.13.0",
+    "@iconify/react": "^5.0.2",
     "@release-it/conventional-changelog": "^9.0.2",
-    "@storybook/addon-essentials": "^8.4.1",
-    "@storybook/addon-interactions": "^8.4.1",
-    "@storybook/addon-onboarding": "^8.4.1",
-    "@storybook/blocks": "^8.4.1",
-    "@storybook/react": "^8.4.1",
-    "@storybook/react-vite": "^8.4.1",
-    "@storybook/test": "^8.4.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@types/node": "^22.8.7",
@@ -57,7 +50,6 @@
     "prettier": "^3.3.3",
     "release-it": "^17.10.0",
     "sass": "^1.80.6",
-    "storybook": "^8.4.1",
     "stylelint": "^16.10.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-scss": "^6.8.1",
