--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,6 +28,7 @@
       "@/*": ["src/*"],
       "@styles/*": ["src/styles/*"],
       "@assets/*": ["src/assets/*"],
+      "@utils/*": ["src/utils/*"],
       "@components/*": ["src/components/*"]
     },
 
